Update contact email to hello@nomadicdesigns.us in email template

--- a/email-template.html
+++ b/email-template.html
@@ -270,7 +270,7 @@
                         <td class="footer">
                             <p class="signature">— Danny @ <span class="company-name">Nomadic Designs</span></p>
                             <p class="contact-info">
-                                <a href="mailto:daniel.sheehan03@gmail.com" class="contact-link">daniel.sheehan03@gmail.com</a>
+                                <a href="mailto:hello@nomadicdesigns.us" class="contact-link">hello@nomadicdesigns.us</a>
                             </p>
                         </td>
                     </tr>
