--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     <a href="https://nomadicdesigns.us" class="text-gray-300 hover:text-nomadic-green transition-colors duration-200">
                         Main Site
                     </a>
-                    <a href="mailto:daniel.sheehan03@gmail.com" class="text-gray-300 hover:text-nomadic-green transition-colors duration-200">
-                        daniel.sheehan03@gmail.com
+                    <a href="mailto:hello@nomadicdesigns.us" class="text-gray-300 hover:text-nomadic-green transition-colors duration-200">
+                        hello@nomadicdesigns.us
                     </a>
                 </div>
             </div>
